bind data with job table

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@ License: You must have a valid license purchased only from https://themeforest.n
     <meta charset="utf-8">
     <title>Welcome To Recruiter Portal</title>
     <base href="/">
-
+    <style>
+.mat-progress-spinner svg{
+  height: 24px !important;
+  width: 24px !important;
+}
+</style>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1">
